# RatioThink

./: .gitignore  .gitmodules  LICENSE  MODEL_STATE.md  Makefile  PARITY.md  Package.swift  README.md  TEST.md  project.yml
App/: AppDelegate.swift  Info.plist  RatioThinkApp.swift  SettingsNavigation.swift  SettingsURLHandler.swift
Helper/: HelperMain.swift  Info.plist  MenuBarBrandIcon.swift  RatioThinkHelper.entitlements  com.ratiothink.app.helper.plist
Inferlets/chat-apc/: .gitignore  Cargo.toml  Pie.toml  _handshake_test.py  _real_engine.py  _stamp.py  _stamp_test.py  analyze_tree_dump.py  analyze_tree_dump_test.py  apc_bench_real.py  apc_bench_real_test.py  baselines.py  baselines_test.py  bestofn_real_smoke.py  cache_smoke_real.py  e2e_handshake_test.py  e2e_test.py  grade.py  harsh_load_real.py  json_smoke_real.py  probe_tot_stream_real.py  spec_bench_real.py  spec_bench_real_test.py  spec_matrix_real.py  spec_matrix_real_test.py  spec_smoke_real.py  stress_e2e_test.py  tot_accuracy_real.py  tot_accuracy_real_test.py  tot_arms.py  tot_arms_test.py  tot_bench.py  tot_diversity_probe.py  tot_leak_real.py  tot_level_divergence.py  tot_profile_accuracy.py  tot_profile_accuracy_test.py  tot_real_e2e.py  tot_real_smoke.py  tot_real_smoke_test.py  (+4 more)
Inferlets/chat-apc/fixtures/: openclaw_replay_sample.jsonl
Inferlets/chat-apc/prebuilt/: chat-apc.wasm  chat-apc.wasm.stamp
Inferlets/chat-apc/src/: lib.rs  sse.rs
Inferlets/chat-apc/src/bestofn/: divergence.rs  mod.rs  release.rs  schema.rs  stream.rs
Inferlets/chat-apc/src/chat/: apc.rs  completions.rs  dispatch.rs  generate.rs  mod.rs  prefix_cache.rs
Inferlets/chat-apc/src/chat/spec/: cache.rs  mod.rs  sidecar.rs
Inferlets/chat-apc/src/control/: health.rs  load.rs  mod.rs  models.rs
Inferlets/chat-apc/src/tot/: branch.rs  diversity.rs  mod.rs  schema.rs  search.rs  stream.rs  tree.rs
Scripts/: assert-gui-tests-executed.sh  build-pie-engine.sh  capture-readme-screenshots.sh  check-vendor-pie-pin.sh  collect-diagnostics.sh  dmg-window.json  docs-icons.sha256  e2e-prep.sh  generate-app-icon.py  generate-docs-icons.py  genproject.sh  gui-chat-stream-harness.py  gui-testmanagerd-hint.sh  install-app.sh  lint-e2e-gui-gating.sh  lint-gui-only-testing.sh  lint-helper-side-effects.sh  loadviz-harness.py  make-dmg-background.swift  make-dmg-dsstore.py  make-styled-dmg.sh  notarize.sh  package-dmg.sh  purge-app-window-frames.sh  readme-screenshot-harness.py  release-preflight.sh  render-menubar-icon.swift  resume-history-harness.py  (+82 more)
(+448 files in other folders)
